	  fixed missing rounring in getCentroid(Coordinate&) function.
	* source/io/Unload.cpp: removed last deletion in Release.
	  The class is now useless.
	* source/inlines.cpp: inlines functions provider for
	  GEOS_INLINE builds. Fixed libtool problems on OSX,MingW,Cygwin.
	* source/geom/LineString.cpp, source/geom/Point.cpp:
	  changed CoordinateSequence member to be an auto_ptr<>

	
2006-04-10 11:21  mloskot

	* source/headers/geos/util/UniqueCoordinateArrayFilter.h,
	  tests/unit/Makefile.am,
	  tests/unit/geom/CoordinateArraySequenceFactoryTest.cpp,
	  tests/unit/geom/CoordinateArraySequenceTest.cpp,
	  tests/unit/geom/GeometryFactoryTest.cpp,
	  tests/unit/geom/LineStringTest.cpp,
	  tests/unit/geom/LinearRingTest.cpp,
	  tests/unit/geom/MultiPointTest.cpp,
	  tests/unit/util/UniqueCoordinateArrayFilterTest.cpp: Added new
	  test for UniqueCoordinateArrayFilter class. Small fixes related
	  to signed/unsigned comparison.

2006-04-09 13:07  mloskot

	* doc/example.cpp: Small fixes in doc/example.cpp.

2006-04-09 06:56  mloskot

	* tests/xmltester/markup/MarkupSTL.cpp: Removed redundant
	  semicolons from xmltester sources.

2006-04-09 06:26  mloskot

	* tests/xmltester/markup/MarkupSTL.cpp: Removed redundant semicolon
	  reported by g++ -pedantic.

2006-04-09 06:09  mloskot

	* source/operation/valid/SweeplineNestedRingTester.cpp: Removed
	  redundant semicolon reported by g++ -pedantic.

2006-04-09 03:48  mloskot

	* tests/unit/: Makefile.am, geom/IntersectionMatrixTest.cpp: Added
	  Unit Test for IntersectionMatrix class.

2006-04-09 03:46  mloskot

	* source/headers/geos/geom/IntersectionMatrix.h: [SORRY] Added
	  comments for doxygen based on JTS docs. Added row/col dimension
	  consts. Added asserts in functions to check if given row/col is
	  in range.

2006-04-09 03:41  mloskot

	* source/geom/IntersectionMatrix.cpp: Added comments for doxygen
	  based on JTS docs. Added row/col dimension consts. Added asserts